# Starlord

./: .gitignore  LICENSE  README.md  Taskfile.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-test.yml
docs/: bayes.rst  cli.rst  conf.py  grids.rst  index.rst  models.rst  quickstart.rst  sampling.rst  stars.rst
docs/examples/: demo.toml  demo_grid.py  grid_hot_jupiters.py  hd80606.toml  planet.toml  wasp77.toml  wasp77_separate.toml  wasp77_unassoc.toml
docs/quickstart/: index.rst  installation.rst  multi_stars.rst  planets.rst  stars.rst  toml_files.rst
docs/ref/: grids.rst  helpers.rst  index.rst  internal.rst  model_builder.rst  samplers.rst
src/starlord/: __init__.py  _config.py  cli.py  code_components.py  code_gen.py  cy_interpolator.pyx  cy_model.pyx  cy_sampler.pyx  cy_tools.pxd  cy_tools.pyx  grid_gen.py  io.py  model_builder.py  nb_tools.py  sampler.py  samplers.py  star_fitter.py
starlord/: __init__.py  code_components.py  code_gen.py  cystar.pxd  cystar.pyx  sampler.py  star_fitter.py
tests/: batch_data.csv  batch_test.toml  dummy_grid.toml  low_level.toml  test_builtin_sampler.py  test_cli.py  test_code_gen.py  test_components.py  test_cy_tools.py  test_fitter.py  test_grids.py  test_model_builder.py  test_nb_tools.py  test_samplers.py
