[metadata]
name = starlord
version = attr: starlord._version.__version__
author = Daniel Thorngren
author_email = dpthorngren@gmail.com
description = A Python library for fitting stellar observations to models, varying the model grid and parameters included.
url = "https://github.com/dpthorngren/Starlord"
long_description = file: README.md, LICENSE
license = MIT
github_project = dpthorngren/Starlord

[options]
install_requires =
	tomli >= 1.1.0 ; python_version < "3.11"
	numpy
	scipy
	numba
	cython
	dynesty

[options.entry_points]
console_scripts = starlord = starlord.cli:main
