[metadata]
name = starlord
version = attr: starlord._config.__version__
author = Daniel Thorngren
author_email = dpthorngren@gmail.com
description = A Python library for fitting stellar observations to models, varying the model grid and parameters included.
url = "https://github.com/dpthorngren/Starlord"
long_description = file: README.md, LICENSE
license = MIT
github_project = dpthorngren/Starlord

[options]
packages = starlord
package_dir =
    =src
install_requires =
    tomli >= 1.1.0 ; python_version < "3.11"
    setuptools ; python_version > "3.11"
    numpy
    scipy
    cython
    dynesty

[options.package_data]
* = cy_tools.pxd

[options.extras_require]
develop =
    sphynx
    dynesty
    pytest
    flake8
    pytest-cov
    pytest-rerunfailures
    genbadge[all]

[options.entry_points]
console_scripts =
    starlord = starlord.cli:main

[flake8]
max_line_length=120
extend-ignore =
    E227
